cabal-version:   3.4
name:            csmt
version:         0.3.0.0
synopsis:
  An http service around a compact sparse merkle tree implementation

description:
  CSMT is a Haskell library implementing a Compact Sparse Merkle Tree (CSMT)
  data structure with support for persistent storage backends.
  It provides efficient insertion, deletion, and proof generation functionalities.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           warnings
  other-modules:    Paths_csmt
  exposed-modules:
    CSMT
    CSMT.Backend.Pure
    CSMT.Backend.RocksDB
    CSMT.Backend.Standalone
    CSMT.Deletion
    CSMT.Frontend.CLI.App
    CSMT.Hashes
    CSMT.Hashes.CBOR
    CSMT.Hashes.Types
    CSMT.Insertion
    CSMT.Interface
    CSMT.Proof.Completeness
    CSMT.Proof.Insertion
    Data.Serialize.Extra

  build-depends:
    , async                    >=2.2   && <2.3
    , base                     >=4.19  && <5
    , bytestring               >=0.12  && <0.13
    , cborg                    >=0.2   && <0.3
    , cereal                   >=0.5   && <0.6
    , containers               >=0.6   && <0.7
    , crypton                  >=1.0   && <1.1
    , exceptions               >=0.10  && <0.11
    , haskeline                >=0.8   && <0.9
    , lens                     >=5.3   && <5.4
    , memory                   >=0.18  && <0.19
    , opt-env-conf             >=0.11  && <0.12
    , rocksdb-haskell-jprupp   >=2.1   && <2.2
    , rocksdb-kv-transactions  >=0.1   && <0.2
    , rocksdb-kv-transactions:kv-transactions
    , transformers             >=0.6   && <0.7

  hs-source-dirs:   src/csmt/
  default-language: Haskell2010
  other-modules:    Paths_csmt

executable csmt
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          app/cli/main.hs
  build-depends:
    , base  >=4.19 && <5
    , csmt

  default-language: Haskell2010

library test-lib
  import:           warnings
  visibility:       public
  exposed-modules:  CSMT.Test.Lib
  build-depends:
    , base        >=4.19 && <5
    , bytestring  >=0.12 && <0.13
    , cereal      >=0.5  && <0.6
    , csmt
    , free        >=5.2  && <5.3
    , lens        >=5.3  && <5.4
    , QuickCheck  >=2.16 && <2.17
    , rocksdb-kv-transactions:kv-transactions

  hs-source-dirs:   test-lib
  default-language: Haskell2010

test-suite unit-tests
  import:             warnings
  default-language:   Haskell2010
  hs-source-dirs:     test
  build-depends:
    , base                     >=4.19 && <5
    , bytestring               >=0.12 && <0.13
    , cereal                   >=0.5  && <0.6
    , containers               >=0.6  && <0.7
    , csmt
    , csmt:test-lib
    , data-default             >=0.8  && <0.9
    , filepath                 >=1.4  && <1.5
    , hspec                    >=2.11 && <2.12
    , lens                     >=5.3  && <5.4
    , QuickCheck               >=2.16 && <2.17
    , rocksdb-haskell-jprupp   >=2.1  && <2.2
    , rocksdb-kv-transactions  >=0.1  && <0.2
    , rocksdb-kv-transactions:kv-transactions
    , temporary                >=1.3  && <1.4
    , transformers             >=0.6  && <0.7

  build-tool-depends: hspec-discover:hspec-discover >=2.11 && <2.12
  type:               exitcode-stdio-1.0
  main-is:            main.hs
  other-modules:
    CSMT.Backend.RocksDB.TransactionSpec
    CSMT.Backend.RocksDBSpec
    CSMT.DeletionSpec
    CSMT.HashesSpec
    CSMT.InsertionSpec
    CSMT.InterfaceSpec
    CSMT.Proof.CompletenessSpec
    CSMT.Proof.InsertionSpec

benchmark bench
  import:           warnings
  ghc-options:      -O2
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          main.hs
  build-depends:
    , base        >=4.19 && <5
    , bytestring  >=0.12 && <0.13
    , csmt
    , deepseq     >=1.5  && <1.6
    , filepath    >=1.4  && <1.5
    , miniterion  >=0.1  && <0.2
    , rocksdb-kv-transactions:kv-transactions
    , temporary   >=1.3  && <1.4

executable space-leak
  import:           warnings
  ghc-options:      -O2
  main-is:          src/csmt/CSMT/Frontend/CLI/SpaceLeak.hs
  build-depends:
    , base        >=4.19 && <5
    , bytestring  >=0.12 && <0.13
    , csmt
    , rocksdb-kv-transactions:kv-transactions

  default-language: Haskell2010
