cabal-version:   3.4
name:            mts
version:         0.4.0.0
synopsis:        Merkle Tree Store with pluggable trie implementations
description:
  MTS is a Haskell library providing a shared Merkle tree store
  interface with two implementations: CSMT (binary trie) and
  MPF (16-ary Merkle Patricia Forest). Both share a common
  interface with QuickCheck properties proving feature parity.

license:         Apache-2.0
license-file:    LICENSE
author:          Paolo Veronelli
maintainer:      paolo.veronelli@gmail.com
homepage:        https://github.com/paolino/haskell-mts
bug-reports:     https://github.com/paolino/haskell-mts/issues
category:        Cryptography, Data
stability:       experimental
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common warnings
  ghc-options:
    -Wall -Wunused-imports -Wunused-packages -Wmissing-export-lists
    -Wname-shadowing -Wdeferred-out-of-scope-variables
    -Wpartial-type-signatures -Wredundant-constraints

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

-- Shared interface: type families + MerkleTreeStore record + properties
library
  import:           warnings
  exposed-modules:
    Data.Serialize.Extra
    MTS.Interface
    MTS.Properties

  build-depends:
    , base        >=4.19 && <5
    , bytestring  >=0.12 && <0.13
    , cereal      >=0.5  && <0.6
    , QuickCheck  >=2.14 && <2.18

  hs-source-dirs:   lib/mts/
  default-language: Haskell2010

-- CSMT (binary trie) implementation
library csmt
  import:           warnings
  visibility:       public
  exposed-modules:
    CSMT
    CSMT.Backend.Pure
    CSMT.Backend.RocksDB
    CSMT.Backend.Standalone
    CSMT.Deletion
    CSMT.Frontend.CLI.App
    CSMT.Hashes
    CSMT.Hashes.CBOR
    CSMT.Hashes.Types
    CSMT.Insertion
    CSMT.Interface
    CSMT.MTS
    CSMT.Proof.Completeness
    CSMT.Proof.Insertion

  build-depends:
    , async                                    >=2.2  && <2.3
    , base                                     >=4.19 && <5
    , bytestring                               >=0.12 && <0.13
    , cborg                                    >=0.2  && <0.3
    , cereal                                   >=0.5  && <0.6
    , containers                               >=0.6  && <0.7
    , crypton                                  >=1.0  && <1.1
    , exceptions                               >=0.10 && <0.11
    , haskeline                                >=0.8  && <0.9
    , lens                                     >=5.3  && <5.4
    , memory                                   >=0.18 && <0.19
    , mts
    , opt-env-conf                             >=0.11 && <0.14
    , rocksdb-haskell-jprupp                   >=2.1  && <2.2
    , rocksdb-kv-transactions                  >=0.1  && <0.2
    , rocksdb-kv-transactions:kv-transactions
    , transformers                             >=0.6  && <0.7
    , unliftio                                 >=0.2  && <0.3

  autogen-modules:  Paths_mts
  other-modules:    Paths_mts
  hs-source-dirs:   lib/csmt/
  default-language: Haskell2010

-- MPF (16-ary trie) implementation
library mpf
  import:           warnings
  visibility:       public
  exposed-modules:
    MPF
    MPF.Backend.Pure
    MPF.Backend.RocksDB
    MPF.Backend.Standalone
    MPF.Deletion
    MPF.Hashes
    MPF.Insertion
    MPF.Interface
    MPF.MTS
    MPF.Proof.Completeness
    MPF.Proof.Insertion

  build-depends:
    , async                                    >=2.2  && <2.3
    , base                                     >=4.19 && <5
    , bytestring                               >=0.12 && <0.13
    , cereal                                   >=0.5  && <0.6
    , containers                               >=0.6  && <0.7
    , crypton                                  >=1.0  && <1.1
    , exceptions                               >=0.10 && <0.11
    , lens                                     >=5.3  && <5.4
    , memory                                   >=0.18 && <0.19
    , mts
    , rocksdb-haskell-jprupp                   >=2.1  && <2.2
    , rocksdb-kv-transactions                  >=0.1  && <0.2
    , rocksdb-kv-transactions:kv-transactions
    , transformers                             >=0.6  && <0.7
    , unliftio                                 >=0.2  && <0.3

  hs-source-dirs:   lib/mpf/
  default-language: Haskell2010

-- CSMT test utility library
library csmt-test-lib
  import:           warnings
  visibility:       public
  exposed-modules:  CSMT.Test.Lib
  build-depends:
    , base                                     >=4.19 && <5
    , bytestring                               >=0.12 && <0.13
    , cereal                                   >=0.5  && <0.6
    , free                                     >=5.2  && <5.3
    , lens                                     >=5.3  && <5.4
    , mts
    , mts:csmt
    , QuickCheck                               >=2.14 && <2.18
    , rocksdb-kv-transactions:kv-transactions

  hs-source-dirs:   test-lib/csmt
  default-language: Haskell2010

-- MPF test utility library
library mpf-test-lib
  import:           warnings
  visibility:       public
  exposed-modules:  MPF.Test.Lib
  build-depends:
    , base                                     >=4.19 && <5
    , bytestring                               >=0.12 && <0.13
    , lens                                     >=5.3  && <5.4
    , mts:mpf
    , rocksdb-kv-transactions:kv-transactions
    , text                                     >=2.1  && <2.2

  hs-source-dirs:   test-lib/mpf
  default-language: Haskell2010

executable mts
  import:           warnings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
  main-is:          app/cli/main.hs
  build-depends:
    , base      >=4.19 && <5
    , mts:csmt

  default-language: Haskell2010

test-suite unit-tests
  import:             warnings
  default-language:   Haskell2010
  hs-source-dirs:     test
  build-depends:
    , base                                     >=4.19 && <5
    , bytestring                               >=0.12 && <0.13
    , cereal                                   >=0.5  && <0.6
    , containers                               >=0.6  && <0.7
    , data-default                             >=0.8  && <0.9
    , filepath                                 >=1.4  && <1.5
    , hspec                                    >=2.11 && <2.12
    , lens                                     >=5.3  && <5.4
    , mts
    , mts:csmt
    , mts:csmt-test-lib
    , mts:mpf
    , mts:mpf-test-lib
    , QuickCheck                               >=2.14 && <2.18
    , rocksdb-haskell-jprupp                   >=2.1  && <2.2
    , rocksdb-kv-transactions                  >=0.1  && <0.2
    , rocksdb-kv-transactions:kv-transactions
    , temporary                                >=1.3  && <1.4
    , transformers                             >=0.6  && <0.7

  build-tool-depends: hspec-discover:hspec-discover >=2.11 && <2.12
  type:               exitcode-stdio-1.0
  main-is:            main.hs
  other-modules:
    CSMT.Backend.RocksDB.TransactionSpec
    CSMT.Backend.RocksDBSpec
    CSMT.DeletionSpec
    CSMT.HashesSpec
    CSMT.InsertionSpec
    CSMT.InterfaceSpec
    CSMT.Proof.CompletenessSpec
    CSMT.Proof.InsertionSpec
    CSMT.TreePrefixSpec
    MPF.HashesSpec
    MPF.InsertionSpec
    MPF.InterfaceSpec
    MPF.NamespaceSpec
    MPF.Proof.InsertionSpec
    MPF.PropertySpec
    MTS.PropertySpec

benchmark bench
  import:           warnings
  ghc-options:      -O2
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          main.hs
  build-depends:
    , base                                     >=4.19 && <5
    , bytestring                               >=0.12 && <0.13
    , deepseq                                  >=1.5  && <1.6
    , filepath                                 >=1.4  && <1.5
    , miniterion                               >=0.1  && <0.2
    , mts:csmt
    , rocksdb-kv-transactions:kv-transactions
    , temporary                                >=1.3  && <1.4

executable space-leak
  import:           warnings
  main-is:          lib/csmt/CSMT/Frontend/CLI/SpaceLeak.hs
  build-depends:
    , base                                     >=4.19 && <5
    , bytestring                               >=0.12 && <0.13
    , mts:csmt
    , rocksdb-kv-transactions:kv-transactions

  default-language: Haskell2010
